--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "next": "14.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@react-three/fiber": "^8.15.11",
+    "@react-three/drei": "^9.88.13",
+    "three": "^0.161.0",
+    "maath": "^0.9.0"
   },
   "devDependencies": {
     "tailwindcss": "^3.3.0",
@@ -21,5 +25,6 @@
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0"
-  }
+  },
+  "packageManager": "npm@10.0.0"
 }
