--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "react-dom": "^18.2.0",
     "@react-three/fiber": "^8.15.11",
     "@react-three/drei": "^9.88.13",
-    "three": "^0.161.0",
-    "maath": "^0.9.0"
+    "three": "^0.161.0"
   },
   "devDependencies": {
     "tailwindcss": "^3.3.0",
@@ -24,7 +23,9 @@
     "typescript": "^5.0.0",
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0"
+    "@types/react-dom": "^18.0.0",
+    "@types/three": "^0.161.0",
+    "swc": "^1.3.100"
   },
   "packageManager": "npm@10.0.0"
 }
