--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "@types/three": "^0.161.0",
-    "swc": "^1.3.100"
+    "@types/three": "^0.161.0"
   },
   "packageManager": "npm@10.0.0"
 }
