--- a/package.json
+++ b/package.json
@@ -10,20 +10,20 @@
   },
   "dependencies": {
     "next": "14.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "@react-three/fiber": "8.15.11",
-    "@react-three/drei": "9.85.20",
-    "three": "0.161.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "@react-three/fiber": "^8.15.11",
+    "@react-three/drei": "^9.88.13",
+    "three": "^0.158.0"
   },
   "devDependencies": {
-    "typescript": "5.0.0",
-    "@types/node": "20.0.0",
-    "@types/react": "18.0.0",
-    "@types/react-dom": "18.0.0",
-    "@types/three": "0.161.0",
-    "tailwindcss": "3.3.0",
-    "autoprefixer": "10.4.16",
-    "postcss": "8.4.31"
+    "typescript": "^5.0.0",
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@types/three": "^0.158.0",
+    "tailwindcss": "^3.3.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31"
   }
 }
