--- a/package.json
+++ b/package.json
@@ -1,29 +1,32 @@
 {
   "name": "tuf-on-universe",
-  "version": "1.0.0",
+  "version": "1.0.0", 
   "description": "TUF-ON Universe Builder - Interactive Physics Exploration Platform",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build", 
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "next": "14.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@react-three/fiber": "^8.15.11",
-    "@react-three/drei": "^9.56.0",
-    "three": "^0.150.0"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "@react-three/fiber": "8.15.11",
+    "@react-three/drei": "9.85.20", 
+    "three": "0.158.0"
   },
   "devDependencies": {
-    "typescript": "^5.0.0",
-    "@types/node": "^20.0.0",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@types/three": "^0.150.0",
-    "tailwindcss": "^3.3.0",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31"
+    "typescript": "5.2.2",
+    "@types/node": "20.8.7", 
+    "@types/react": "18.2.28",
+    "@types/react-dom": "18.2.13",
+    "@types/three": "0.158.3",
+    "tailwindcss": "3.3.0",
+    "autoprefixer": "10.4.16",
+    "postcss": "8.4.31"
+  },
+  "resolutions": {
+    "three-mesh-bvh": "0.8.0"
   }
 }
