--- a/package.json
+++ b/package.json
@@ -10,18 +10,18 @@
   },
   "dependencies": {
     "next": "14.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "three": "0.150.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "three": "^0.158.0"
   },
   "devDependencies": {
-    "typescript": "5.0.0",
-    "@types/node": "20.0.0",
-    "@types/react": "18.0.0", 
-    "@types/react-dom": "18.0.0",
-    "@types/three": "0.150.0",
-    "tailwindcss": "3.3.0",
-    "autoprefixer": "10.4.16",
-    "postcss": "8.4.31"
+    "typescript": "^5.2.2",
+    "@types/node": "^20.10.0",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
+    "@types/three": "^0.158.2",
+    "tailwindcss": "^3.3.6",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31"
   }
 }
