--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,47 @@
-# Dependencies
+# Node dependencies
 node_modules/
-/.pnp
+.pnp/
 .pnp.js
 
-# Testing
-/coverage
+# Build output
+.next/
+out/
+dist/
 
-# Next.js
-/.next/
-/out/
+# Testing
+coverage/
 
 # Environment variables
 .env*
 !.env.example
 
-# Debug
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
-# Vercel
-.vercel
+# Vercel deployment
+.vercel/
+
+# IDE / Editor
+.vscode/
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# TypeScript
+*.tsbuildinfo
+
+# Misc
+*.log
+*.tgz
+*.bak
+*.old
+*.swp
