--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "tailwindcss init -p || true"
   },
   "dependencies": {
     "next": "14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "^0.158.0",
-    "@react-three/fiber": "^8.15.11"
+    "@react-three/fiber": "^8.15.11",
+    "@react-three/drei": "^9.88.1"
   },
   "devDependencies": {
     "typescript": "^5.2.2",
@@ -22,7 +24,9 @@
     "@types/react-dom": "^18.2.15",
     "@types/three": "^0.158.2",
     "tailwindcss": "^3.3.6",
+    "postcss": "^8.4.31",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31"
+    "eslint": "^8.53.0",
+    "eslint-config-next": "^14.0.0"
   }
-} 
+}
